syntax = "proto3";

option go_package = "github.com/TemaStatham/TaskService/proto/notification";
package functions;

service NotificationService {
  rpc SendNotification(NotificationRequest) returns (NotificationResponse) {}
}

message NotificationRequest {
  uint64 userID = 1;
  string data = 2;
}

message NotificationResponse {
  string status = 1;
}
